# bazel_gradle_perf

./: .gitignore  README.md
largeMonolithicJavaProject/src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p1002/: BUILD.bazel  Production20040.java  Production20041.java  Production20042.java  Production20043.java  Production20044.java  Production20045.java  Production20046.java  Production20047.java  Production20048.java  Production20049.java  Production20050.java  Production20051.java  Production20052.java  Production20053.java  Production20054.java  Production20055.java  Production20056.java  Production20057.java  Production20058.java  Production20059.java
largeMonolithicJavaProject/src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p1008/: BUILD.bazel  Production20160.java  Production20161.java  Production20162.java  Production20163.java  Production20164.java  Production20165.java  Production20166.java  Production20167.java  Production20168.java  Production20169.java  Production20170.java  Production20171.java  Production20172.java  Production20173.java  Production20174.java  Production20175.java  Production20176.java  Production20177.java  Production20178.java  Production20179.java
largeMonolithicJavaProject/src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p1020/: BUILD.bazel  Production20400.java  Production20401.java  Production20402.java  Production20403.java  Production20404.java  Production20405.java  Production20406.java  Production20407.java  Production20408.java  Production20409.java  Production20410.java  Production20411.java  Production20412.java  Production20413.java  Production20414.java  Production20415.java  Production20416.java  Production20417.java  Production20418.java  Production20419.java
largeMonolithicJavaProject/src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p1038/: BUILD.bazel  Production20760.java  Production20761.java  Production20762.java  Production20763.java  Production20764.java  Production20765.java  Production20766.java  Production20767.java  Production20768.java  Production20769.java  Production20770.java  Production20771.java  Production20772.java  Production20773.java  Production20774.java  Production20775.java  Production20776.java  Production20777.java  Production20778.java  Production20779.java
largeMonolithicJavaProject/src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p105/: BUILD.bazel  Production2100.java  Production2101.java  Production2102.java  Production2103.java  Production2104.java  Production2105.java  Production2106.java  Production2107.java  Production2108.java  Production2109.java  Production2110.java  Production2111.java  Production2112.java  Production2113.java  Production2114.java  Production2115.java  Production2116.java  Production2117.java  Production2118.java  Production2119.java
largeMonolithicJavaProject/src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p1056/: BUILD.bazel  Production21120.java  Production21121.java  Production21122.java  Production21123.java  Production21124.java  Production21125.java  Production21126.java  Production21127.java  Production21128.java  Production21129.java  Production21130.java  Production21131.java  Production21132.java  Production21133.java  Production21134.java  Production21135.java  Production21136.java  Production21137.java  Production21138.java  Production21139.java
largeMonolithicJavaProject/src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p1069/: BUILD.bazel  Production21380.java  Production21381.java  Production21382.java  Production21383.java  Production21384.java  Production21385.java  Production21386.java  Production21387.java  Production21388.java  Production21389.java  Production21390.java  Production21391.java  Production21392.java  Production21393.java  Production21394.java  Production21395.java  Production21396.java  Production21397.java  Production21398.java  Production21399.java
largeMonolithicJavaProject/src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p1075/: BUILD.bazel  Production21500.java  Production21501.java  Production21502.java  Production21503.java  Production21504.java  Production21505.java  Production21506.java  Production21507.java  Production21508.java  Production21509.java  Production21510.java  Production21511.java  Production21512.java  Production21513.java  Production21514.java  Production21515.java  Production21516.java  Production21517.java  Production21518.java  Production21519.java
largeMonolithicJavaProject/src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p1077/: BUILD.bazel  Production21540.java  Production21541.java  Production21542.java  Production21543.java  Production21544.java  Production21545.java  Production21546.java  Production21547.java  Production21548.java  Production21549.java  Production21550.java  Production21551.java  Production21552.java  Production21553.java  Production21554.java  Production21555.java  Production21556.java  Production21557.java  Production21558.java  Production21559.java
largeMonolithicJavaProject/src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p1081/: BUILD.bazel  Production21620.java  Production21621.java  Production21622.java  Production21623.java  Production21624.java  Production21625.java  Production21626.java  Production21627.java  Production21628.java  Production21629.java  Production21630.java  Production21631.java  Production21632.java  Production21633.java  Production21634.java  Production21635.java  Production21636.java  Production21637.java  Production21638.java  Production21639.java
largeMonolithicJavaProject/src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p1083/: BUILD.bazel  Production21660.java  Production21661.java  Production21662.java  Production21663.java  Production21664.java  Production21665.java  Production21666.java  Production21667.java  Production21668.java  Production21669.java  Production21670.java  Production21671.java  Production21672.java  (+7 more)
(+125785 files in other folders)
