load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "p1002",
    srcs = glob(["*.java"]),
    javacopts = ["-XepDisableAllChecks"],
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p996",
        "//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p990",
        "//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p998",
        "//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p1000","//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p1001"],
)
