load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "p1020",
    srcs = glob(["*.java"]),
    javacopts = ["-XepDisableAllChecks"],
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p1014",
        "//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p1008",
        "//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p1018",
        "//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p1016","//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p1019"],
)
