load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "p1038",
    srcs = glob(["*.java"]),
    javacopts = ["-XepDisableAllChecks"],
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p1020",
        "//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p1002",
        "//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p1032",
        "//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p1026",
        "//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p1036",
        "//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p1034","//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p1037"],
)
