load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "p105",
    srcs = glob(["*.java"]),
    javacopts = ["-XepDisableAllChecks"],
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p103","//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p104"],
)
