load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "p1056",
    srcs = glob(["*.java"]),
    javacopts = ["-XepDisableAllChecks"],
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p1050",
        "//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p1044",
        "//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p1054",
        "//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p1052","//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p1055"],
)
