load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "p1069",
    srcs = glob(["*.java"]),
    javacopts = ["-XepDisableAllChecks"],
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p1068",
        "//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p1066","//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p1064"],
)
