load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "p1075",
    srcs = glob(["*.java"]),
    javacopts = ["-XepDisableAllChecks"],
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p1069",
        "//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p1062",
        "//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p1071",
        "//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p1074","//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p1073"],
)
