load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "p1081",
    srcs = glob(["*.java"]),
    javacopts = ["-XepDisableAllChecks"],
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p1077",
        "//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p1079","//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p1080"],
)
