load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "p1089",
    srcs = glob(["*.java"]),
    javacopts = ["-XepDisableAllChecks"],
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p1087","//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p1088"],
)
