load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "p109",
    srcs = glob(["*.java"]),
    javacopts = ["-XepDisableAllChecks"],
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p91",
        "//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p72",
        "//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p103",
        "//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p97",
        "//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p105",
        "//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p107","//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p108"],
)
