load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "p1123",
    srcs = glob(["*.java"]),
    javacopts = ["-XepDisableAllChecks"],
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p1121",
        "//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p1119","//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p1122"],
)
