load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "p1129",
    srcs = glob(["*.java"]),
    javacopts = ["-XepDisableAllChecks"],
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p1123",
        "//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p1117",
        "//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p1127",
        "//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p1125","//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p1128"],
)
