load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "p113",
    srcs = glob(["*.java"]),
    javacopts = ["-XepDisableAllChecks"],
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p111","//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p112"],
)
