load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "p1148",
    srcs = glob(["*.java"]),
    javacopts = ["-XepDisableAllChecks"],
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p1093",
        "//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p1038",
        "//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p1147",
        "//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p1129","//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p1111"],
)
