load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "p1150",
    srcs = glob(["*.java"]),
    javacopts = ["-XepDisableAllChecks"],
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p1148","//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p1149"],
)
