load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "p1164",
    srcs = glob(["*.java"]),
    javacopts = ["-XepDisableAllChecks"],
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p1162","//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p1163"],
)
