load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "p1178",
    srcs = glob(["*.java"]),
    javacopts = ["-XepDisableAllChecks"],
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p1174",
        "//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p1176","//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p1177"],
)
