load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "p1190",
    srcs = glob(["*.java"]),
    javacopts = ["-XepDisableAllChecks"],
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p1188",
        "//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p1186","//src/main/java/org/gradle/test/performance/largemonolithicjavaproject/p1189"],
)
